[package]
name = "gpt_commit"
version = "0.1.1"
authors=["snsk.syk.gtobzz@gmail.com"]
edition = "2021"
description = "A tool to make ChatGPT create a commit message based on a `git diff`."
license = "MIT"
readme = "README.md"
repository = "https://github.com/shunsuke6/gpt-commit.git"

[[bin]]
path = "src/main.rs"
name = "gptcommit"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0"

[dependencies.reqwest]
 version= "0.11"
features = ["json"]
